무료 로드아웃 추가 및 yaml파일 원본이 아닌 사본을 수정한 찐빠 해결
